--- a/style.css
+++ b/style.css
@@ -1,28 +1,68 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");
+
+* {
+  margin: 0;
+  font-family: "Montserrat";
+  text-decoration: none;
+  font-size: 16px;
+}
+
 body,
 nav,
 form {
   display: flex;
-  flex-wrap: wrap;
 }
+
 nav,
 form {
   flex-direction: column;
 }
+
+form {
+  min-width: 300px;
+  gap: 12px;
+}
+
 nav {
-  gap: 10px;
+  width: max-content;
+  gap: 20px;
+  padding: 20px;
+  padding-top: 40px;
+  background-color: #24292f;
+  height: 100vh;
+  & * {
+    color: white;
+    font-weight: 400;
+    font-size: 18px;
+  }
 }
+
+h1 {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
 main {
-  width: 90%;
+  padding: 20px;
+  padding-top: 40px;
 }
+
 table {
   width: 100%;
   border-collapse: collapse;
 }
+
+tbody {
+  vertical-align: top;
+}
+
 tr,
 td,
 th {
+  padding: 6px 10px;
   border: 1px solid lightgray;
 }
+
 input,
 button,
 textarea {
@@ -30,17 +70,37 @@ textarea {
   outline: none;
   border: 1px solid lightgray;
   border-radius: 5px;
-  margin: 5px;
 }
+
 button {
   cursor: pointer;
 }
+
+.blue-button {
+  background-color: rgb(9, 105, 218);
+  color: white;
+}
+
+.grey-button {
+  background-color: rgb(246, 248, 250);
+  color: rgb(36, 41, 47);
+}
+
+.green-button {
+  background-color: rgb(31, 136, 61);
+  color: white;
+}
+
+.buttons {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
 th {
   text-align: start;
 }
-textarea {
-  resize: none;
-}
+
 @media (max-width: 1200px) {
   body {
     flex-direction: column;
@@ -48,5 +108,8 @@ textarea {
   nav {
     display: flex;
     flex-direction: row;
+    height: fit-content;
+    padding-top: 20px;
+    width: calc(100vw - 40px);
   }
 }
